Interfaz registro Interfaz login Toolbar

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,14 +1,36 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
-     
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      >
+
     <h:head>
     </h:head>
- 
-    <h:body>
-        <p:spinner />
+
+    <h:body style="margin:0">
+        <h:form>
+
+            <p:growl id="messages" showDetail="true" />
+
+            <p:toolbar class="toolbar">
+                <f:facet name="left">
+                        <p:button outcome="index" value="HOME" />
+
+                    <span class="ui-separator">
+                        <span class="ui-icon pi pi-ellipsis-v" />
+                    </span>
+
+                </f:facet>
+                <f:facet name="right">
+                    <p:menuButton value="Alan">
+                        <p:menuitem value="Encuestas"  update="messages" icon="pi pi-save" />
+                        <p:menuitem value="Cerrar sesión" update="messages" icon="pi pi-refresh" />
+                    </p:menuButton>
+                </f:facet>
+
+            </p:toolbar>
+        </h:form>
     </h:body>
 </html>
