--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,24 @@
       >
 
     <h:head>
+        <style>
+            body{
+                background-color: #ebebeb;
+            }
+            #contenedor{
+                width: 70%;
+                border:1px solid black;
+                background-color: white;
+                border-radius: 10px;
+                margin-left: 15%;
+                margin-right: 15%; 
+            }
+            #padre{
+                display:flex;
+                justify-content: center;
+                align-content: center;
+            }
+        </style>
     </h:head>
 
     <h:body style="margin:0">
@@ -32,5 +50,19 @@
 
             </p:toolbar>
         </h:form>
+        
+        <h:form>
+            <div id="padre" style="margin-top:15px; ">
+                <div id="contenedor" style="padding:15px;">
+                    <div style="padding:15px">
+                        <p:outputLabel value="Encuestas" style="font-weight:bold; font-size: 25px"/> 
+                        <br>
+                        </br> 
+                            <input type="img" src="pi pi-plus-circle" width="200px" height="200px"/>                        
+                    </div>
+                </div>
+            </div>
+        </h:form>
+        
     </h:body>
 </html>
