--- a/src/main/webapp/registro.xhtml
+++ b/src/main/webapp/registro.xhtml
@@ -4,6 +4,8 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
+        <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
+
         <style>
             body{
                 background-color: #ebebeb;
@@ -33,9 +35,7 @@
                 <f:facet name="left">
                     <p:button outcome="index" value="BeanForms" />
 
-                    <span class="ui-separator">
-                        <span class="ui-icon pi pi-ellipsis-v" />
-                    </span>
+                   
 
 
                 </f:facet>
