--- a/src/main/webapp/contestar_form.xhtml
+++ b/src/main/webapp/contestar_form.xhtml
@@ -5,13 +5,150 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+
+      >
+    <h:head>
+        <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
+
+        <style>
+            #contenedor{
+                width: 700px;
+
+            }
+            #padre{
+                display:flex;
+                justify-content: center;
+                align-content: center;
+            }
+            .ui-toggleswitch {
+                position: relative;
+                display: inline-block;
+                width: 20px;
+                height: 28px;
+            }
+
+            .ui-toggleswitch-slider {
+                position: absolute;
+                cursor: pointer;
+                width:52px;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #ccc;
+                -webkit-transition: .4s;
+                transition: .4s;
+            }
+
+            .ui-toggleswitch-slider:before {
+                position: absolute;
+                content: "";
+                height: 20px;
+                width: 20px;
+
+                background-color: white;
+                -webkit-transition: .4s;
+                transition: .4s;
+            }
+            .main{
+                display:flex;
+                justify-content: center;
+                width:100%;
+            }
+            .main-align{
+                display:flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .second-align{
+                display:flex;
+                justify-content: center;
+                align-items: center;   
+                width:100%;
+            }
+            .preguntas-zone{
+                width:100%;
+            }
+        </style>
+    </h:head>
+    <h:body style="margin:0px;">
+        <h:form id="toolbar">
+
+
+            <p:toolbar class="toolbar">
+                <f:facet name="left">
+                    <p:button outcome="index" value="BeanForms" />
+
+
+                </f:facet>
+
+                <f:facet name="right">
+                    <p:commandButton id="dynaButton" value="#{menuToolbar.titulo}" type="button" icon="ui-icon-triangle-1-s"/>  
+                    <p:menu model="#{menuToolbar.model}" overlay="true" trigger="dynaButton" my="left top" at="left bottom" />                       
+
+                </f:facet>
+
+            </p:toolbar>
+        </h:form>
+        <div id="padre" >    
+            <h:form>
+                <p:growl id="growl" showDetail="true" sticky="false"/>
+
+                <div id="contenedor">
+
+                    <p:panel id="panelEncuesta" header="#{contestarEncuesta.formContestado.titulo} "  style="margin-bottom:20px;text-align: center;">
+
+
+                        <div class="main">
+
+
+                            <div class="preguntas-zone">
+                                <h:panelGroup id="toUpdate">
+                                    <ui:repeat   value="#{contestarEncuesta.formContestado.pregunta}" var="pregunta" varStatus="index_pregunta">
+
+                                        <h:outputText value="Pregunta:" /> <br/>
+                                        <div class="second-align"> 
+                                            <p:outputLabel  value="#{pregunta.pregunta}"  style="width:80%" /> 
+
+                                        </div>
+
+                                        <br/>
+                                        <h:outputText value="Opciones:" /> 
+                                        <h:panelGroup id="opciones">
+                                            <ui:repeat value="#{pregunta.opciones}" var="opcion" >
+                                                <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+                                                    <p:outputLabel for="opcion" value="Opciones:" />
+                                                    <p:selectOneRadio id="console" value="#{radioView.console}" unselectable="true">
+                                                        <f:selectItem itemLabel="Xbox One" itemValue="Xbox One" />
+                                                        <f:selectItem itemLabel="PS4" itemValue="PS4" />
+                                                        <f:selectItem itemLabel="Wii U" itemValue="Wii U" />
+                                                    </p:selectOneRadio>
+                                                </h:panelGrid>
+
+
+                                            </ui:repeat>
+
+                                        </h:panelGroup><br/>
+                                        <br/>
+
+                                    </ui:repeat>
+                                </h:panelGroup>
+                                <br/>
+                                <p:commandButton  actionListener="#{crearEncuesta.crearEncuesta}" value="Contestar" icon="pi pi-check"  update="growl"/>
+
+                            </div>
+
+                    </p:panel> 
+
+                </div>
+            </h:form>     
+        </div>
+    </h:body>
 </html>
+
+
