--- a/src/main/webapp/registroEncuesta.xhtml
+++ b/src/main/webapp/registroEncuesta.xhtml
@@ -69,7 +69,7 @@
 
 
                     <div style="padding:30px;">
-                        <p:commandButton value="Contestar encuesta" actionListener="#{registroEncuesta.registrar()}" update="growl" ajax="true" style="width:100%;"/>
+                        <p:commandButton value="Contestar encuesta" actionListener="#{registroEncuesta.registrar()}" update="growl"  style="width:100%;"/>
                         <p:spacer width="10"/>
                         <p:button outcome="index" value="Cancelar" style="width:100%;"/>
 
