--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -66,7 +66,7 @@
                     <h:panelGrid columns="1" style="width:100%">
 
                         <h:outputText value="Creador: #{form.creador_fk}" />
-                        <p:commandLink action="#{obtenerFormularios.contestarForm(form.forms_id)}" title="Contestar">
+                        <p:commandLink action="#{obtenerFormularios.contestarForm(form.forms_id,form.titulo)}" title="Contestar">
                             <h:outputText styleClass="pi pi-pencil" style="margin:0 auto;"/>
                         </p:commandLink>
                     </h:panelGrid>
