--- a/src/main/webapp/escanear_codigo.xhtml
+++ b/src/main/webapp/escanear_codigo.xhtml
@@ -52,24 +52,16 @@
         <h:form id="form">
             <p:growl id="growl" showDetail="true" sticky="false"/>
             <div id="padre">
-                <p:panel id="basic" header="Llena tus datos para contestar la encuesta"  style="margin-bottom:20px;text-align: center;">
-
-                    <p:link value="Registrate para no llenar está información por encuesta" style="color: #FFF; margin-left: 25px " href="registro.xhtml"/>
+                <p:panel id="basic" header="Coloca el código de un form privado"  style="margin-bottom:20px;text-align: center;">
 
                     <div style="padding:15px;">
-                        <p:outputLabel value="Nombre: " for="nombre" style="font-weight:bold;"/>
-                        <p:inputText id="nombre" value="#{registroEncuesta.usuario.nombre}" style="width:100%" required="true"/>
+                        <p:outputLabel value="Código " for="nombre" style="font-weight:bold;"/>
+                        <p:inputText id="nombre" value="#{canjearCodigo.codigo}" style="width:100%" required="true"/>
                     </div>
-
-                    <div style="padding:15px;">
-                        <p:outputLabel value="Apellido: " for="apellido" style="font-weight:bold;"/>
-                        <p:inputText id="apellido" value="#{registroEncuesta.usuario.apellido}" style="width:100%" required="true"/>
-                    </div>
-
-
+          
 
                     <div style="padding:30px;">
-                        <p:commandButton value="Contestar encuesta" actionListener="#{registroEncuesta.registrar()}" update="growl"  style="width:100%;"/>
+                        <p:commandButton value="Contestar encuesta" actionListener="#{canjearCodigo.buscarForm()}" update="growl"  style="width:100%;"/>
                         <p:spacer width="10"/>
                         <p:button outcome="index" value="Cancelar" style="width:100%;"/>
 
